--- a/admin/index.html
+++ b/admin/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dream Car Heaven - Panel Administratora</title>
+  <title>Dream Car Heaven - Panel</title>
   <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
-<body></body>
+<body>
+</body>
 </html>
