--- a/oferta.html
+++ b/oferta.html
@@ -2,74 +2,118 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>Nasze Auta | Dream Car Heaven</title>
+    <title>Oferta | Dream Car Heaven</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <style>
+        .modal { display: none; position: fixed; z-index: 999; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.9); overflow-y: auto; padding: 20px; }
+        .modal-content { background: #111; margin: auto; padding: 30px; border: 1px solid #333; max-width: 900px; border-radius: 15px; color: white; }
+        .close { float: right; font-size: 40px; cursor: pointer; color: #ffd700; }
+        .spec-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin: 20px 0; background: #222; padding: 20px; border-radius: 10px; }
+        .gallery-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 10px; margin-top: 20px; }
+        .gallery-img { width: 100%; height: 150px; object-fit: cover; border-radius: 5px; cursor: pointer; }
+        .contact-footer { border-top: 1px solid #333; margin-top: 30px; padding-top: 20px; text-align: center; }
+        .stock-card { cursor: pointer; transition: transform 0.3s; }
+        .stock-card:hover { transform: scale(1.02); }
+    </style>
 </head>
-<body style="background: #000; color: white; font-family: sans-serif;">
+<body style="background: #000; color: white; font-family: 'Montserrat', sans-serif;">
 
-    <nav style="padding: 20px; border-bottom: 1px solid #222;">
-        <a href="index.html" style="color: white; text-decoration: none;">← Powrót do strony głównej</a>
-    </nav>
+    <nav style="padding: 20px;"><a href="index.html" style="color: white; text-decoration: none;">← Powrót</a></nav>
+    <h1 style="text-align: center;">NASZA OFERTA</h1>
 
-    <h1 style="text-align: center; margin-top: 40px; text-transform: uppercase;">Aktualna Oferta</h1>
+    <div id="lista-ofert" class="stock-grid"></div>
 
-    <div id="lista-ofert" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 25px; padding: 40px;">
-        <p id="loading" style="text-align: center; grid-column: 1/-1;">Ładowanie ofert z bazy danych...</p>
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="document.getElementById('myModal').style.display='none'">&times;</span>
+            <div id="modal-data"></div>
+        </div>
     </div>
 
     <script>
-        async function pobierzOferty() {
+        let wszystkieAuta = [];
+
+        async function pobierz() {
+            const res = await fetch('https://api.github.com/repos/michalmailnaspam-ops/dream-car-heaven/contents/content/auta');
+            const pliki = await res.json();
             const kontener = document.getElementById('lista-ofert');
-            const loading = document.getElementById('loading');
-            
-            // UWAGA: Sprawdź w GitHubie czy folder nazywa się dokładnie tak: content/auta
-            const folderPath = "content/auta"; 
-            const user = "michalmailnaspam-ops";
-            const repo = "dream-car-heaven";
 
-            try {
-                const response = await fetch(`https://api.github.com/repos/${user}/${repo}/contents/${folderPath}`);
-                
-                if (!response.ok) {
-                    loading.innerHTML = "Błąd: Nie można połączyć się z folderem " + folderPath + ". Sprawdź wielkość liter w nazwie folderu na GitHubie!";
-                    return;
-                }
+            for (let plik of pliki) {
+                if (plik.name.endsWith('.md')) {
+                    const r = await fetch(plik.download_url);
+                    const t = await r.text();
 
-                const pliki = await response.json();
-                loading.style.display = 'none'; // Ukrywamy napis o ładowaniu
+                    const getF = (n) => {
+                        const regex = new RegExp(`${n}:\\s*["']?(.*?)["']?(\\n|$)`, 'i');
+                        return t.match(regex)?.[1].trim() || "---";
+                    };
 
-                for (let plik of pliki) {
-                    if (plik.name.endsWith('.md')) {
-                        const res = await fetch(plik.download_url);
-                        const t = await res.text();
-
-                        // Wyciąganie danych (odporne na brak cudzysłowów)
-                        const getField = (name) => {
-                            const regex = new RegExp(`${name}:\\s*["']?(.*?)["']?(\\n|$)`);
-                            const match = t.match(regex);
-                            return match ? match[1].trim() : "";
-                        };
-
-                        const tytul = getField("title");
-                        const cena = getField("price");
-                        const foto = getField("image");
-                        const silnik = getField("engine");
-
-                        kontener.innerHTML += `
-                            <div style="background: #111; border: 1px solid #333; border-radius: 12px; overflow: hidden; text-align: center; padding-bottom: 20px;">
-                                <div style="width: 100%; height: 200px; background: url('${foto}') center/cover no-repeat; background-color: #222;"></div>
-                                <h3 style="padding: 15px 10px 5px; margin: 0;">${tytul}</h3>
-                                <p style="color: #888; margin: 0 0 15px;">${silnik}</p>
-                                <div style="color: #ffd700; font-size: 1.5rem; font-weight: bold;">${cena}</div>
-                            </div>`;
+                    // Wyciąganie galerii (lista obrazków)
+                    const galleryMatch = t.match(/gallery:([\s\S]*?)(?=\n\w+:|$)/);
+                    let galleryHtml = "";
+                    if(galleryMatch) {
+                        const imgs = galleryMatch[1].match(/img:\s*(.*)/g);
+                        if(imgs) imgs.forEach(i => {
+                            const src = i.replace('img:', '').trim();
+                            galleryHtml += `<img src="${src}" class="gallery-img" onclick="window.open('${src}')">`;
+                        });
                     }
+
+                    const auto = {
+                        tytul: getF("title"),
+                        cena: getF("price"),
+                        foto: getF("image"),
+                        rok: getF("year"),
+                        silnik: getF("engine"),
+                        przebieg: getF("mileage"),
+                        skrzynia: getF("gearbox"),
+                        naped: getF("drive"),
+                        opis: t.split('---').pop().trim(),
+                        galeria: galleryHtml
+                    };
+
+                    kontener.innerHTML += `
+                        <div class="stock-card" onclick="pokazDetale('${encodeURIComponent(JSON.stringify(auto))}')">
+                            <div class="stock-img" style="background-image: url('${auto.foto}')"></div>
+                            <div class="stock-info">
+                                <h4>${auto.tytul}</h4>
+                                <p>${auto.rok} | ${auto.silnik}</p>
+                                <span class="price">${auto.cena}</span>
+                            </div>
+                        </div>`;
                 }
-            } catch (err) {
-                loading.innerHTML = "Wystąpił problem: " + err.message;
             }
         }
-        pobierzOferty();
+
+        function pokazDetale(data) {
+            const auto = JSON.parse(decodeURIComponent(data));
+            const modal = document.getElementById('myModal');
+            document.getElementById('modal-data').innerHTML = `
+                <img src="${auto.foto}" style="width:100%; border-radius:10px;">
+                <h2 style="font-size:2rem; margin:20px 0;">${auto.tytul}</h2>
+                <div class="spec-grid">
+                    <div><b>Rok:</b> ${auto.rok}</div>
+                    <div><b>Silnik:</b> ${auto.silnik}</div>
+                    <div><b>Przebieg:</b> ${auto.przebieg}</div>
+                    <div><b>Skrzynia:</b> ${auto.skrzynia}</div>
+                    <div><b>Napęd:</b> ${auto.naped}</div>
+                    <div style="color:#ffd700; font-size:1.5rem;"><b>Cena:</b> ${auto.cena}</div>
+                </div>
+                <h3>Opis pojazdu:</h3>
+                <p style="line-height:1.6;">${auto.opis}</p>
+                <h3>Galeria zdjęć:</h3>
+                <div class="gallery-grid">${auto.galeria}</div>
+                <div class="contact-footer">
+                    <h3>Kontakt w sprawie auta:</h3>
+                    <p>📞 Kuba: <b>600 293 685</b></p>
+                    <p>📞 Darek: <b>505 239 718</b></p>
+                    <p>📞 Michał: <b>508 123 251</b></p>
+                </div>
+            `;
+            modal.style.display = "block";
+        }
+
+        pobierz();
     </script>
 </body>
 </html>
